# Jij-MCP-Server

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
jij_mcp/: jm_checker.py  jm_guide_all.md  jm_prompts.py  mcp_setting.py  python_repr.py  server.py
jij_mcp/fetch/: __init__.py  fetcher.py  types.py
jij_mcp/py_checker/: pyright_check.py
jij_mcp/quantum/: qiskit_prompt.py
